[package]
name = "rust-tracker"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1.0", features = ["full"] }
# signature
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
# rabbit
lapin = "2.0"
# decode
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# time
chrono = { version = "0.4", features = ["serde"] }
# env
dotenv = "0.15"
# log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# templates
tera = "1.19"
lazy_static = "1.4"
# url
url = "2.5"
urlencoding = "2.1.3"
# ssl 
tokio-rustls = "0.26"
rustls-pemfile = "2.2"
rustls = { version = "0.23.22", features = ["ring"] }
# error
anyhow = "1.0.95"
